serviceweb-main/PDocker/kube/mysqlclient.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-client
spec:
  containers:
  - name: mysql-client
    image: mysql:latest
    command: ['sleep', '3600']  # Keep the pod running for 1 hour
